# KIV-VSS-Task01

./: .gitignore  CMakeLists.txt  README.md  data.txt  histogram.py  run.bat  run.sh
src/: CMakeLists.txt  Distribution.hpp  Histogram.cpp  Histogram.h  Histogram.hpp  main.cpp
src/functions/: CDF.h  Exponential.cpp  Exponential.h  Normal.cpp  Normal.h  Uniform.cpp  Uniform.h  cdf.h
